--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -1,8 +1,5 @@
 name: Elixir CI
 
-env:
-  MIX_ENV: test
-
 on:
   push:
     branches: [ master ]
@@ -11,10 +8,13 @@ on:
 
 jobs:
   build:
-
-    name: Build and test
+    name: OTP ${{matrix.otp}} / Elixir ${{matrix.elixir}}
     runs-on: ubuntu-latest
-    
+
+    env:
+      MIX_ENV: test
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     strategy:
       matrix:
         otp: ['22.3', '23.0']
@@ -41,7 +41,7 @@ jobs:
         mix local.rebar --force
         mix local.hex --force
         mix deps.get
-        mix compile    
+        mix compile
     - name: Check formatting
       run: mix format --check-formatted
     - name: Run credo
